[tool.poetry]
name = "closeyoureyes"
version = "0.0.1"
description = ""
authors = ["HenryGongZY <watershell@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.3"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
